feat(jdk8): 1.0.x 源码全面降级至 JDK 8 兼容（分模块批量完成）
按用户版本号规则：1.0.x 适配 JDK 1.8 的三方组件版本、Maven 依赖配置、Java 语法。

## 依赖线恢复（Phase B）

- 根 pom：恢复 1.0.x 依赖线（java.version=1.8、Spring 5.3.39、maven.version 3.6.3 等），
  modules 保留当前聚合根拓扑（15 模块，samples/quarkus 按允许轴排除出 reactor）
- ddd4j-dependencies / ddd4j-bom / ddd4j-parent：整体恢复同步前版本
  （javax 命名空间、Spring Boot 2.7.x 兼容线），easy4j 组件版本保持 1.0.x.20260630-SNAPSHOT
- mybatis-plus 3.5.8 → 3.5.9（MybatisAggregateRepository 需 extension.repository API，
  3.5.9 仍支持 JDK8，jsqlparser 用 -4.9 变体）

## 源码语法降级（Phase C-I）

- 同路径 341 个 M 文件 + 14 个跨路径映射文件从 1240dd4c 恢复（pre-sync JDK8 移植版）
- JDK9+ API 全局清扫：
  - List/Set/Map.copyOf → Collections.unmodifiableX(new X<>(...))（74 文件，含括号平衡修复）
  - List.of/Set.of/Map.of → Arrays.asList/singleton/Collections.unmodifiableSet(...)
  - @Serial 注解 + import 全删（26 文件）
  - StringBuilder.isEmpty() → length()==0；Optional.isEmpty() → !isPresent()
  - Duration.toSeconds() → getSeconds()；stream.toList() → collect(...)
  - Objects.requireNonNullElse → 三元（1 文件）
  - Files.writeString → Files.write(getBytes)；readAllBytes/readNBytes → 循环读
  - String.strip() → trim()；Text block（"""）→ StringBuilder（2 个 Checker）
  - switch 箭头表达式 → 传统 switch/case（3 处）；instanceof pattern → cast（4 处）
  - record → 传统 class（SqlObservation×2、QLExpressExecutionResult、QLExpressValidationResult）
  - 接口 private 方法 → default（AggregateController 8 个）
  - java.net.http HttpClient → hutool-http（FlksecCryptoStrategy、4 个 external 模板、3 个 monitor webhook 客户端）
  - <proc>full</proc> 编译器标记移除（JDK17-only）
- pom 依赖修复：datascope/license 补 spring-context/lombok/slf4j/validation；
  qlexpress 补 ddd4j-kit；web-dropwizard 补 javax.servlet-api；monitor 补 hutool-http；
  webflux 依赖 ddd4j-web(jar)→ddd4j-web-core + 移除已删除的 extension-jackson 依赖；
  projection-javalin/vertx/dropwizard 补 ddd4j-core；删除同步新增的 Ddd4jMybatisGuiceModule
  （依赖 2.0.x-only 的 mybatis 内部布局）
- jsqlparser 5.3(JDK11+) → 4.9（mybatis/mybatisplus 模块级 pin）

## 构建验证

JAVA_HOME=corretto-1.8.0_504 + Maven 3.9.16
mvn install -Dmaven.test.skip=tr