@@ -1,5 +1,6 @@
 package io.ddd4j.data.cqrs;
 
+import java.util.Collections;
 import io.ddd4j.core.cqrs.command.Command;
 import io.ddd4j.core.cqrs.command.CommandExecutor;
 import io.ddd4j.core.cqrs.command.Result;
@@ -56,7 +57,7 @@ class CommandHandlerTest {
 
         @Override
         public Set<Class<? extends Command>> supportedCommands() {
-            return Set.of(CreateOrderCommand.class);
+            return Collections.singleton(CreateOrderCommand.class);
         }
 
         @Override
