@@ -1,117 +1,69 @@
-/*
- * Copyright (c) 2024-2026 ddd4j project. All rights reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package io.ddd4j.data.event.store.jpa;
+package io.ddd4j.data.eventstore.jpa;
 
-import com.fasterxml.jackson.annotation.JsonValue;
 import com.fasterxml.jackson.databind.json.JsonMapper;
+
 import io.ddd4j.core.cqrs.eventstore.AggregateVersionConflictException;
 import io.ddd4j.core.cqrs.eventstore.EventStore;
 import io.ddd4j.core.cqrs.eventstore.StoredEvent;
 import io.ddd4j.core.cqrs.eventstore.jackson.EventPayloadSerializer;
 import io.ddd4j.core.ddd.event.AggregateRootId;
+import io.ddd4j.core.ddd.event.AggregateVersion;
 import io.ddd4j.core.ddd.event.DomainEvent;
 import io.ddd4j.core.ddd.event.EntityType;
 import io.ddd4j.core.ddd.event.EventId;
 import io.ddd4j.core.ddd.event.StringEntityType;
-import jakarta.persistence.EntityManager;
-import jakarta.persistence.EntityTransaction;
+
+import javax.persistence.EntityManager;
+import javax.persistence.EntityTransaction;
+import javax.persistence.TypedQuery;
+import java.time.Instant;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Objects;
 
 /**
- * 基于 JPA 的 {@link EventStore} 实现（CQRS 写侧持久化）。
- *
- * <p>通过 {@link JpaStoredEventRepository} 封装持久化原语，本类专注于
- * EventStore SPI 语义：乐观锁校验、事件序列化/反序列化、事务边界管理。
+ * 基于 JPA 2.2（javax.persistence）的 {@link EventStore} 适配器。
  *
  * <h3>事务管理</h3>
- * <p>本实现使用编程式事务管理（{@link EntityTransaction}），在 {@code append}
- * 方法内开启事务，冲突或异常时整体回滚。调用方无需（也不应）在外层包裹事务。
- * {@code read} / {@code readAll} 同样在本方法内开启只读事务，保证读隔离性。
+ * <p>程序化事务（{@link EntityTransaction}）：{@code append} 在方法内开启事务，
+ * 冲突或异常时整体回滚；{@code read} / {@code readAll} 同样包裹只读事务保证读隔离。
+ * 调用方无需（也不应）在外层包裹事务。
  *
- * <h3>payload 序列化</h3>
- * <p>事件载荷通过 {@link JsonKit#toJson} 序列化为 JSON 文本存储，
- * 读取时通过 {@link JsonKit#toObject} 按 {@code event_type} 反序列化。
- * 若事件类已被删除或重命名（{@code Class.forName} 失败），回退为 {@code Map}，
- * 此时丢失类型信息，javadoc 已说明此限制。
+ * <h3>乐观锁双保险</h3>
+ * <p>第一道：append 前 {@code COUNT} 校验 {@code expectedVersion}，不一致抛
+ * {@link AggregateVersionConflictException}；第二道：复合主键
+ * {@code (aggregate_type, aggregate_id, version)} 与 {@code position} 唯一约束
+ * 在并发漏检窗口兜底（重复版本/位置插入失败，事务回滚）。
+ *
+ * <h3>版本语义</h3>
+ * <p>与三分支统一契约一致：空流 {@code expectedVersion=0}，事件版本从
+ * {@code expectedVersion + 1} 起分配（1-based），流内版本 = 已存事件数。
+ *
+ * <h3>schema</h3>
+ * <p>统一表 {@code DDD4J_EVENT_STORE}，payload 为 TEXT（与 2.0.x/3.0.x 对齐），
+ * 元数据（eventId / correlationId / causationId / timestamp）以列为准，
+ * payload JSON 仅承载业务属性（见 {@link EventPayloadSerializer}）。
  *
  * @author <a href="https://github.com/partme-ai">PartMe.AI</a>
- * @since 3.0.0
+ * @since 1.0.x
  */
 public class JpaEventStore implements EventStore {
 
+    private static final String ENTITY = "StoredEventEntity";
+
     private final EntityManager entityManager;
-    private final JpaStoredEventRepository repository;
     private final EventPayloadSerializer serializer;
 
-    /**
-     * 创建 JPA 事件存储。
-     *
-     * <p>使用默认的 {@link JpaStoredEventRepositoryImpl} 作为仓储实现。
-     *
-     * @param entityManager JPA 实体管理器（由调用方管理生命周期）
-     * @throws NullPointerException entityManager 为 null 时抛出
-     */
     public JpaEventStore(EntityManager entityManager) {
-        this(entityManager, new JpaStoredEventRepositoryImpl(entityManager),
-                new EventPayloadSerializer(JsonMapper.builder().findAndAddModules().build()));
+        this(entityManager, new EventPayloadSerializer(JsonMapper.builder().findAndAddModules().build()));
     }
 
-    /**
-     * 创建 JPA 事件存储（自定义仓储）。
-     *
-     * @param entityManager JPA 实体管理器
-     * @param repository    事件仓储实现
-     * @throws NullPointerException 任一参数为 null 时抛出
-     */
-    public JpaEventStore(EntityManager entityManager, JpaStoredEventRepository repository) {
-        this(entityManager, repository, new EventPayloadSerializer(JsonMapper.builder().findAndAddModules().build()));
-    }
-
-    public JpaEventStore(EntityManager entityManager, JpaStoredEventRepository repository,
-                         EventPayloadSerializer serializer) {
+    public JpaEventStore(EntityManager entityManager, EventPayloadSerializer serializer) {
         this.entityManager = Objects.requireNonNull(entityManager, "entityManager must not be null");
-        this.repository = Objects.requireNonNull(repository, "repository must not be null");
         this.serializer = Objects.requireNonNull(serializer, "serializer must not be null");
     }
 
-    /**
-     * {@inheritDoc}
-     *
-     * <p>乐观锁：先查询当前流最大版本，与 {@code expectedVersion} 不一致即抛
-     * {@link IllegalStateException}。同一聚合的 append 操作在同一事务内完成，
-     * 冲突时整体回滚，不留半截流。
-     *
-     * <p>事务边界：本方法内开启编程式事务，调用方无需额外包裹。
-     *
-     * <h3>批量插入</h3>
-     * <p>循环构造 entity 后，先 {@link EntityManager#flush()} 触发 Hibernate 批量 INSERT，
-     * 再 {@link EntityManager#clear()} 清空 persistence context。
-     * 顺序很关键：先 flush 再 clear 才能让 Hibernate 把所有 INSERT 合并为批量 SQL。
-     *
-     * <p>批量插入需配合 Hibernate 配置生效：
-     * <pre>{@code
-     * spring.jpa.properties.hibernate.jdbc.batch_size=50
-     * spring.jpa.properties.hibernate.order_inserts=true
-     * spring.jpa.properties.hibernate.order_updates=true
-     * }</pre>
-     *
-     * <p>未配置 batch_size 时，每次 flush 仍会发出单条 INSERT（行为正确，但无性能提升）。
-     */
     @Override
     public void append(String aggregateType, AggregateRootId aggregateId,
                        List<? extends DomainEvent<?>> events, long expectedVersion) {
@@ -121,39 +73,33 @@ public class JpaEventStore implements EventStore {
         if (events.isEmpty()) {
             return;
         }
-
         EntityTransaction tx = entityManager.getTransaction();
         try {
             tx.begin();
-            entityManager.clear();
-
-            long currentVersion = repository.findCurrentVersion(aggregateType, aggregateId.asString());
-            if (currentVersion != expectedVersion) {
+            long actualVersion = currentVersion(aggregateType, aggregateId.asString());
+            if (actualVersion != expectedVersion) {
                 throw new AggregateVersionConflictException(
-                        aggregateType, aggregateId.asString(), expectedVersion, currentVersion);
+                        aggregateType, aggregateId.asString(), expectedVersion, actualVersion);
             }
-
+            long position = maxPosition();
             long version = expectedVersion;
             for (DomainEvent<?> event : events) {
+                version++;
+                event.setAggregateVersion(new AggregateVersion(version));
                 StoredEventEntity entity = new StoredEventEntity();
                 entity.setAggregateType(aggregateType);
                 entity.setAggregateId(aggregateId.asString());
-                entity.setVersion(++version);
-                entity.setPosition(repository.nextPosition());
+                entity.setVersion(version);
+                entity.setPosition(++position);
                 entity.setEventType(event.getClass().getName());
                 entity.setEventId(event.getEventId().asString());
                 entity.setCorrelationId(event.getCorrelationId() == null ? null : event.getCorrelationId().asString());
                 entity.setCausationId(event.getCausationId() == null ? null : event.getCausationId().asString());
                 entity.setPayload(serializer.serialize(event));
-                entity.setTimestamp(event.getEventTimestamp().toInstant());
-                repository.save(entity);
+                entity.setTimestamp(Instant.now());
+                entityManager.persist(entity);
             }
-
-            // 触发 Hibernate 批量 INSERT：先 flush 把所有未刷盘的 SQL 发到 DB，
-            // 再 clear 释放 persistence context 中的 entity（避免 OOM）。
             entityManager.flush();
-            entityManager.clear();
-
             tx.commit();
         } catch (RuntimeException e) {
             if (tx.isActive()) {
@@ -163,24 +109,23 @@ public class JpaEventStore implements EventStore {
         }
     }
 
-    /**
-     * {@inheritDoc}
-     *
-     * <p>按版本升序读取指定聚合的全部事件。
-     * 事件载荷通过 {@link JsonKit} 反序列化，类型无法还原时回退为 {@code Map}。
-     */
     @Override
     public List<StoredEvent> read(String aggregateType, AggregateRootId aggregateId) {
         Objects.requireNonNull(aggregateType, "aggregateType must not be null");
         Objects.requireNonNull(aggregateId, "aggregateId must not be null");
         EntityTransaction tx = entityManager.getTransaction();
-        tx.begin();
         try {
-            List<StoredEvent> result = repository.findByAggregateTypeAndAggregateIdOrderByVersionAsc(
-                            aggregateType, aggregateId.asString())
+            tx.begin();
+            List<StoredEvent> result = entityManager.createQuery(
+                            "select e from " + ENTITY + " e where e.aggregateType = :aggregateType"
+                                    + " and e.aggregateId = :aggregateId order by e.version asc",
+                            StoredEventEntity.class)
+                    .setParameter("aggregateType", aggregateType)
+                    .setParameter("aggregateId", aggregateId.asString())
+                    .getResultList()
                     .stream()
                     .map(this::toStoredEvent)
-                    .toList();
+                    .collect(java.util.stream.Collectors.toList());
             tx.commit();
             return result;
         } catch (RuntimeException e) {
@@ -195,13 +140,22 @@ public class JpaEventStore implements EventStore {
     public List<StoredEvent> read(String aggregateType, AggregateRootId aggregateId,
                                   long fromVersion, long toVersion) {
         EntityTransaction tx = entityManager.getTransaction();
-        tx.begin();
         try {
-            List<StoredEvent> result = repository.findByAggregateTypeAndAggregateIdAndVersionBetweenOrderByVersionAsc(
-                            aggregateType, aggregateId.asString(), fromVersion, toVersion)
+            tx.begin();
+            List<StoredEvent> result = entityManager.createQuery(
+                            "select e from " + ENTITY + " e where e.aggregateType = :aggregateType"
+                                    + " and e.aggregateId = :aggregateId"
+                                    + " and e.version between :fromVersion and :toVersion"
+                                    + " order by e.version asc",
+                            StoredEventEntity.class)
+                    .setParameter("aggregateType", aggregateType)
+                    .setParameter("aggregateId", aggregateId.asString())
+                    .setParameter("fromVersion", fromVersion)
+                    .setParameter("toVersion", toVersion)
+                    .getResultList()
                     .stream()
                     .map(this::toStoredEvent)
-                    .toList();
+                    .collect(java.util.stream.Collectors.toList());
             tx.commit();
             return result;
         } catch (RuntimeException e) {
@@ -212,20 +166,23 @@ public class JpaEventStore implements EventStore {
         }
     }
 
-    /**
-     * {@inheritDoc}
-     *
-     * <p>按全局 position 升序分页读取事件。
-     */
     @Override
     public List<StoredEvent> readAll(long fromPosition, int limit) {
+        if (limit <= 0) {
+            throw new IllegalArgumentException("limit must be positive");
+        }
         EntityTransaction tx = entityManager.getTransaction();
-        tx.begin();
         try {
-            List<StoredEvent> result = repository.findByPositionGreaterThanEqualOrderByPositionAsc(fromPosition, limit)
+            tx.begin();
+            List<StoredEvent> result = entityManager.createQuery(
+                            "select e from " + ENTITY + " e where e.position >= :fromPosition order by e.position asc",
+                            StoredEventEntity.class)
+                    .setParameter("fromPosition", fromPosition)
+                    .setMaxResults(limit)
+                    .getResultList()
                     .stream()
                     .map(this::toStoredEvent)
-                    .toList();
+                    .collect(java.util.stream.Collectors.toList());
             tx.commit();
             return result;
         } catch (RuntimeException e) {
@@ -236,16 +193,30 @@ public class JpaEventStore implements EventStore {
         }
     }
 
-    /**
-     * 将持久化实体转换为 core {@link StoredEvent}。
-     *
-     * <p>事件类型通过显式存储的 class name 还原，payload 通过强类型序列化器反序列化。
-     *
-     * @param entity 持久化实体
-     * @return 重建的存储事件
-     */
+    private long currentVersion(String aggregateType, String aggregateId) {
+        TypedQuery<Long> query = entityManager.createQuery(
+                "select count(e) from " + ENTITY + " e where e.aggregateType = :aggregateType"
+                        + " and e.aggregateId = :aggregateId", Long.class);
+        return query.setParameter("aggregateType", aggregateType)
+                .setParameter("aggregateId", aggregateId)
+                .getSingleResult();
+    }
+
+    private long maxPosition() {
+        // PESSIMISTIC_WRITE 行锁序列化并发 append 的全局 position 分配
+        //（回填自 3.0.x 7263653c）。取最大 position 行加锁（避免聚合查询，
+        // H2 不支持 grouped select 的 FOR UPDATE）；空表无行可锁时由
+        // uk_position 唯一约束兜底并发冲突。
+        List<Long> maxRows = entityManager.createQuery(
+                "select e.position from " + ENTITY + " e order by e.position desc", Long.class)
+                .setMaxResults(1)
+                .setLockMode(javax.persistence.LockModeType.PESSIMISTIC_WRITE)
+                .getResultList();
+        return maxRows.isEmpty() ? 0L : maxRows.get(0);
+    }
+
     private StoredEvent toStoredEvent(StoredEventEntity entity) {
-        DomainEvent<?> event = serializer.deserialize(entity.getPayload(), resolveEventType(entity.getEventType()));
+        DomainEvent<?> payload = serializer.deserialize(entity.getPayload(), resolveEventType(entity.getEventType()));
         return new StoredEvent(
                 EventId.valueOf(entity.getEventId()),
                 entity.getAggregateType(),
@@ -253,33 +224,30 @@ public class JpaEventStore implements EventStore {
                 entity.getVersion(),
                 entity.getPosition(),
                 ZonedDateTime.ofInstant(entity.getTimestamp(), ZoneOffset.UTC),
-                event,
+                payload,
                 EventId.valueOf(entity.getCorrelationId()),
                 EventId.valueOf(entity.getCausationId()));
     }
 
-    /**
-     * 反序列化事件载荷。
-     *
-     * <p>优先尝试按 {@code eventType} 还原为强类型对象；
-     * 若类不存在，回退为 {@code Map}（丢失类型信息）。
-     *
-     * @param payload   JSON 文本
-     * @param eventType 事件类型全限定名
-     * @return 反序列化后的事件对象或 Map
-     */
     @SuppressWarnings("unchecked")
     private Class<? extends DomainEvent<?>> resolveEventType(String eventType) {
         try {
             return (Class<? extends DomainEvent<?>>) Class.forName(eventType);
-        } catch (ClassNotFoundException exception) {
-            throw new IllegalStateException("Unknown event type: " + eventType, exception);
+        } catch (ClassNotFoundException e) {
+            throw new IllegalStateException("Unknown event type: " + eventType, e);
         }
     }
 
-    private record StringAggregateRootId(String value) implements AggregateRootId {
+    /** 字符串聚合根标识适配器：实体列只存字符串，读回侧重建 {@link AggregateRootId}。 */
+    private static final class StringAggregateRootId implements AggregateRootId {
 
-        private static final StringEntityType TYPE = new StringEntityType("String");
+        private static final EntityType TYPE = new StringEntityType("String");
+
+        private final String value;
+
+        StringAggregateRootId(String value) {
+            this.value = value;
+        }
 
         @Override
         public EntityType getType() {
@@ -287,7 +255,6 @@ public class JpaEventStore implements EventStore {
         }
 
         @Override
-        @JsonValue
         public String asString() {
             return value;
         }
