@@ -1,5 +1,6 @@
 package io.ddd4j.extension.excel.importer;
 
+import java.util.ArrayList;
 import lombok.Getter;
 
 import java.util.Collections;
@@ -24,8 +25,8 @@ public final class ImportResult<T> {
     private final List<ImportError> errors;
 
     private ImportResult(List<T> data, List<ImportError> errors) {
-        this.data = List.copyOf(data);
-        this.errors = List.copyOf(errors);
+        this.data = Collections.unmodifiableList(new ArrayList<>(data));
+        this.errors = Collections.unmodifiableList(new ArrayList<>(errors));
     }
 
     /**
