@@ -35,7 +35,7 @@ class ExcelKitTest {
 
         // when read back
         List<UserVO> read;
-        try (var in = new ByteArrayInputStream(bytes)) {
+        try (java.io.ByteArrayInputStream in = new java.io.ByteArrayInputStream(bytes)) {
             read = ExcelKit.readAll(in, UserVO.class);
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -75,7 +75,7 @@ class ExcelKitTest {
 
         // when
         ImportResult<UserVO> result;
-        try (var in = new ByteArrayInputStream(bytes)) {
+        try (java.io.ByteArrayInputStream in = new java.io.ByteArrayInputStream(bytes)) {
             result = ExcelKit.importExcel(in, UserVO.class);
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -113,10 +113,10 @@ class ExcelKitTest {
     void errorCollectingListener_should_not_throw_on_parse_error() {
         // given：构造一个故意混入错误数据的 Excel。
         // 用 Date 列写入非日期字符串，触发 ExcelDataConvertException
-        var head = new java.util.ArrayList<List<String>>();
-        head.add(java.util.List.of("日期"));
-        var content = new java.util.ArrayList<List<Object>>();
-        var row1 = new java.util.ArrayList<Object>();
+        java.util.List<java.util.List<String>> head = new java.util.ArrayList<>();
+        head.add(java.util.Arrays.asList("日期"));
+        java.util.List<java.util.List<Object>> content = new java.util.ArrayList<>();
+        java.util.List<Object> row1 = new java.util.ArrayList<>();
         row1.add("不是日期格式的字符串");  // 写入字符串但字段为 Date
         content.add(row1);
 
@@ -124,11 +124,11 @@ class ExcelKitTest {
         EasyExcel.write(out).head(head).sheet("S").doWrite(content);
 
         // 准备一个 Date 字段的 VO 读取
-        record DateVO(@com.alibaba.excel.annotation.ExcelProperty("日期") java.util.Date d) {}
+        // DateVO 类已移到外部
 
         // when
         ImportResult<DateVO> result;
-        try (var in = new java.io.ByteArrayInputStream(out.toByteArray())) {
+        try (java.io.ByteArrayInputStream in = new java.io.ByteArrayInputStream(out.toByteArray())) {
             ErrorCollectingReadListener<DateVO> listener = new ErrorCollectingReadListener<>();
             ExcelKit.importExcel(in, DateVO.class, listener);
             result = listener.toResult();
@@ -139,5 +139,14 @@ class ExcelKitTest {
         // then：onException 收集到错误，不抛到调用方
         // easyexcel 对部分转换失败容错较好；如未触发异常，至少保证流程不抛
         Assertions.assertThat(result).isNotNull();
+    }
+
+    public static class DateVO {
+        @com.alibaba.excel.annotation.ExcelProperty("日期")
+        private java.util.Date d;
+        public DateVO() {}
+        public DateVO(java.util.Date d) { this.d = d; }
+        public java.util.Date getD() { return d; }
+        public void setD(java.util.Date d) { this.d = d; }
     }
 }
