@@ -1,5 +1,6 @@
 package io.ddd4j.extension.license.manager;
 
+import java.util.Collections;
 import io.ddd4j.extension.license.LicenseExtraModel;
 import io.ddd4j.extension.license.LicenseInfo;
 import io.ddd4j.extension.license.machine.DefaultLicenseMachineInfoProvider;
@@ -63,7 +64,7 @@ public class CustomLicenseManager {
             throw new IllegalStateException("MAC 校验失败: 当前机器地址不在授权范围内");
         }
         if (Objects.nonNull(expected.getSn())
-                && !matchesAny(expected.getSn(), Set.of(machineInfoProvider.serialNumber()), this::normalizeText)) {
+                && !matchesAny(expected.getSn(), Collections.singleton(machineInfoProvider.serialNumber()), this::normalizeText)) {
             throw new IllegalStateException("SN 校验失败: 当前机器序列号不在授权范围内");
         }
     }
