@@ -1,5 +1,7 @@
 package io.ddd4j.extension.qlexpress.model;
 
+import java.util.Collections;
+import java.util.HashMap;
 import com.alibaba.qlexpress4.QLOptions;
 import lombok.Builder;
 import lombok.Getter;
@@ -26,7 +28,7 @@ public final class QLExpressExecutionOptions {
     @Builder.Default
     private final long timeoutMillis = DEFAULT_TIMEOUT_MILLIS;
     @Builder.Default
-    private final Map<String, Object> attachments = Map.of();
+    private final Map<String, Object> attachments = Collections.emptyMap();
     @Builder.Default
     private final boolean cache = true;
     @Builder.Default
@@ -43,7 +45,7 @@ public final class QLExpressExecutionOptions {
     }
 
     public QLOptions toNativeOptions() {
-        Map<String, Object> safeAttachments = Objects.isNull(attachments) ? Map.of() : Map.copyOf(attachments);
+        Map<String, Object> safeAttachments = Objects.isNull(attachments) ? Collections.emptyMap() : Collections.unmodifiableMap(new HashMap<>(attachments));
         return QLOptions.builder()
                 .precise(precise)
                 .polluteUserContext(polluteUserContext)
