@@ -1,5 +1,7 @@
 package io.ddd4j.mq.delivery;
 
+import java.util.Collections;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
@@ -16,7 +18,7 @@ class MQOutboxDispatcherTest {
 
     @Test
     void dispatch_shouldPublishOutsideStoreAndConfirmWithLeaseOwner() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 1)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 1)));
         List<String> sent = new ArrayList<>();
         RecordingObserver observer = new RecordingObserver();
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store, message -> sent.add(message.messageId()),
@@ -24,16 +26,16 @@ class MQOutboxDispatcherTest {
 
         MQOutboxDispatchResult result = dispatcher.dispatch("instance-a", 10, NOW);
 
-        assertEquals(List.of("message-1"), sent);
+        assertEquals(Collections.singletonList("message-1"), sent);
         assertEquals("instance-a", store.leaseOwner);
-        assertEquals(List.of("message-1"), store.published);
+        assertEquals(Collections.singletonList("message-1"), store.published);
         assertEquals(new MQOutboxDispatchResult(1, 1, 0, 0, 0), result);
-        assertEquals(List.of("published"), observer.outboxOutcomes);
+        assertEquals(Collections.singletonList("published"), observer.outboxOutcomes);
     }
 
     @Test
     void dispatch_shouldRescheduleFailedMessageBeforeMaximumAttempts() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 1)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 1)));
         RecordingObserver observer = new RecordingObserver();
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store,
                 message -> {
@@ -42,14 +44,14 @@ class MQOutboxDispatcherTest {
 
         MQOutboxDispatchResult result = dispatcher.dispatch("instance-a", 10, NOW);
 
-        assertEquals(List.of("message-1"), store.rescheduled);
+        assertEquals(Collections.singletonList("message-1"), store.rescheduled);
         assertEquals(new MQOutboxDispatchResult(1, 0, 1, 0, 0), result);
-        assertEquals(List.of("retry"), observer.outboxOutcomes);
+        assertEquals(Collections.singletonList("retry"), observer.outboxOutcomes);
     }
 
     @Test
     void dispatch_shouldReportDeadMessageAfterMaximumAttempts() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 12)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 12)));
         RecordingObserver observer = new RecordingObserver();
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store,
                 message -> {
@@ -59,12 +61,12 @@ class MQOutboxDispatcherTest {
         MQOutboxDispatchResult result = dispatcher.dispatch("instance-a", 10, NOW);
 
         assertEquals(new MQOutboxDispatchResult(1, 0, 0, 1, 0), result);
-        assertEquals(List.of("dead"), observer.outboxOutcomes);
+        assertEquals(Collections.singletonList("dead"), observer.outboxOutcomes);
     }
 
     @Test
     void dispatch_shouldNotifyFailureWhenLeaseConfirmationIsLost() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 1)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 1)));
         store.publishConfirmed = false;
         RecordingObserver observer = new RecordingObserver();
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store, message -> {
@@ -73,12 +75,12 @@ class MQOutboxDispatcherTest {
         MQOutboxDispatchResult result = dispatcher.dispatch("instance-a", 10, NOW);
 
         assertEquals(new MQOutboxDispatchResult(1, 0, 0, 0, 1), result);
-        assertEquals(List.of("failed"), observer.outboxOutcomes);
+        assertEquals(Collections.singletonList("failed"), observer.outboxOutcomes);
     }
 
     @Test
     void dispatch_shouldIgnoreObserverFailure() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 1)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 1)));
         MQDeliveryObserver failingObserver = new MQDeliveryObserver() {
             @Override
             public void onOutboxPublished(MQOutboxRecord record) {
@@ -95,7 +97,7 @@ class MQOutboxDispatcherTest {
 
     @Test
     void dispatch_shouldNotifyFailureWhenRescheduleCannotPersist() {
-        RecordingStore store = new RecordingStore(List.of(record("message-1", 1)));
+        RecordingStore store = new RecordingStore(Arrays.asList(record("message-1", 1)));
         store.rescheduleFailure = true;
         RecordingObserver observer = new RecordingObserver();
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store,
@@ -105,12 +107,12 @@ class MQOutboxDispatcherTest {
 
         assertThrows(IllegalStateException.class, () -> dispatcher.dispatch("instance-a", 10, NOW));
 
-        assertEquals(List.of("failed"), observer.outboxOutcomes);
+        assertEquals(Collections.singletonList("failed"), observer.outboxOutcomes);
     }
 
     @Test
     void dispatch_shouldRejectInvalidOwnerAndLimit() {
-        RecordingStore store = new RecordingStore(List.of());
+        RecordingStore store = new RecordingStore(Arrays.asList());
         MQOutboxDispatcher dispatcher = new MQOutboxDispatcher(store, message -> {
         }, MQDeliveryPolicy.productionDefault());
 
@@ -119,7 +121,7 @@ class MQOutboxDispatcherTest {
     }
 
     private static MQOutboxRecord record(String messageId, int attempts) {
-        return new MQOutboxRecord(messageId, "orders.created", "{}", Map.of(), MQOutboxStatus.LEASED,
+        return new MQOutboxRecord(messageId, "orders.created", "{}", Collections.emptyMap(), MQOutboxStatus.LEASED,
                 NOW, "instance-a", NOW.plusSeconds(60), attempts, null, null);
     }
 
