@@ -27,6 +27,7 @@ import io.ddd4j.guice.context.GuiceContext;
 import io.ddd4j.runtime.health.RuntimeReadinessRegistry;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -41,7 +42,7 @@ public final class Ddd4jGuiceRuntime implements AutoCloseable {
     @Inject
     public Ddd4jGuiceRuntime(Injector injector, DomainEventPublisher publisher, SubjectProvider subjectProvider,
                              I18nProvider i18nProvider, CommandBus commandBus) {
-        this(injector, publisher, subjectProvider, i18nProvider, commandBus, List.of());
+        this(injector, publisher, subjectProvider, i18nProvider, commandBus, Collections.emptyList());
     }
 
     public Ddd4jGuiceRuntime(Injector injector, DomainEventPublisher publisher, SubjectProvider subjectProvider,
