@@ -23,18 +23,21 @@ import io.ddd4j.web.testkit.WebContractClient;
 import io.ddd4j.web.testkit.WebContractPaths;
 import io.ddd4j.web.testkit.WebContractResponse;
 import io.javalin.Javalin;
-import io.javalin.json.JavalinJackson;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.Objects;
+import java.util.Collections;
+import java.util.stream.Collectors;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -56,13 +59,11 @@ class Ddd4jJavalinWebContractTest extends AbstractWebContractTest {
         Ddd4jJavalinWeb ddd4jWeb = new Ddd4jJavalinWeb(new WebRequestContextFactory(), requestLifecycle,
                 new DefaultWebExceptionTranslator(),
                 new WebIdempotencyLifecycle(new CacheIdempotencyGuard("javalin-contract")));
-        app = Javalin.create(config -> {
-            config.startup.showJavalinBanner = false;
-            config.jsonMapper(new JavalinJackson());
-            ddd4jWeb.configure(config);
-            registerContractRoutes(config.routes);
-        }).start(0);
-        contractClient = new JavalinContractClient(HttpClient.newHttpClient(), app.port());
+        app = Javalin.create(config -> config.showJavalinBanner = false);
+        ddd4jWeb.configure(app);
+        registerContractRoutes(app);
+        app.start(0);
+        contractClient = new JavalinContractClient(app.port());
     }
 
     @AfterEach
@@ -80,33 +81,35 @@ class Ddd4jJavalinWebContractTest extends AbstractWebContractTest {
         return contractClient;
     }
 
-    private void registerContractRoutes(io.javalin.config.RoutesConfig routes) {
-        routes.get(WebContractPaths.SUCCESS, context -> context.json(R.ok(Map.of("result", "ok"))));
-        routes.get(WebContractPaths.PUBLIC, context -> context.json(R.ok(Map.of("result", "ok"))));
-        routes.get(WebContractPaths.PROTECTED, context -> context.json(R.ok(Map.of("result", "ok"))));
-        routes.post(WebContractPaths.CREATED, context -> context.status(201)
-                .json(R.ok(Map.of("result", "created"))));
-        routes.get(WebContractPaths.CONTEXT, context -> {
+    private void registerContractRoutes(Javalin javalinApp) {
+        javalinApp.get(WebContractPaths.SUCCESS, context -> context.json(R.ok(Collections.singletonMap("result", "ok"))));
+        javalinApp.get(WebContractPaths.PUBLIC, context -> context.json(R.ok(Collections.singletonMap("result", "ok"))));
+        javalinApp.get(WebContractPaths.PROTECTED, context -> context.json(R.ok(Collections.singletonMap("result", "ok"))));
+        javalinApp.post(WebContractPaths.CREATED, context -> context.status(201)
+                .json(R.ok(Collections.singletonMap("result", "created")));
+        javalinApp.get(WebContractPaths.CONTEXT, context -> {
             Map<String, Object> requestContext = new LinkedHashMap<>();
             requestContext.put("requestId", ThreadContext.get(WebContextScope.REQUEST_ID));
             requestContext.put("traceId", ThreadContext.get(WebContextScope.TRACE_ID));
             requestContext.put("tenantId", ThreadContext.get(ContextConstants.TENANT_ID));
             context.json(R.ok(requestContext));
         });
-        routes.post(WebContractPaths.IDEMPOTENT,
-                context -> context.json(R.ok(Map.of("result", "accepted"))));
-        routes.get("/contract/errors/{type}", context -> {
+        javalinApp.post(WebContractPaths.IDEMPOTENT,
+                context -> context.json(R.ok(Collections.singletonMap("result", "accepted")));
+        javalinApp.get("/contract/errors/{type}", context -> {
             String type = context.pathParam("type");
-            throw switch (type) {
-                case "bad-request" -> new IllegalArgumentException("bad request");
-                case "forbidden" -> new SecurityException("forbidden");
-                case "not-found" -> new NoSuchElementException("not found");
-                case "conflict" -> new IllegalStateException("conflict");
-                case "unsupported-media-type" -> new WebStatusException(415, "unsupported media type");
-                case "unprocessable-entity" -> new WebStatusException(422, "unprocessable entity");
-                case "too-many-requests" -> new WebStatusException(429, "too many requests");
-                default -> new RuntimeException("internal failure");
-            };
+            Exception ex;
+            switch (type) {
+                case "bad-request": ex = new IllegalArgumentException("bad request"); break;
+                case "forbidden": ex = new SecurityException("forbidden"); break;
+                case "not-found": ex = new NoSuchElementException("not found"); break;
+                case "conflict": ex = new IllegalStateException("conflict"); break;
+                case "unsupported-media-type": ex = new WebStatusException(415, "unsupported media type"); break;
+                case "unprocessable-entity": ex = new WebStatusException(422, "unprocessable entity"); break;
+                case "too-many-requests": ex = new WebStatusException(429, "too many requests"); break;
+                default: ex = new RuntimeException("internal failure"); break;
+            }
+            throw ex;
         });
     }
 
@@ -119,22 +122,39 @@ class Ddd4jJavalinWebContractTest extends AbstractWebContractTest {
         };
     }
 
-    private record JavalinContractClient(HttpClient httpClient, int port) implements WebContractClient {
+    private static final class JavalinContractClient implements WebContractClient {
+        private final int port;
+
+        JavalinContractClient(int port) {
+            this.port = port;
+        }
 
         @Override
         public WebContractResponse request(String method, String path, Map<String, String> headers, String body) {
             try {
-                HttpRequest.Builder builder = HttpRequest.newBuilder()
-                        .uri(URI.create("http://127.0.0.1:" + port + path));
-                headers.forEach(builder::header);
-                HttpRequest.BodyPublisher publisher = Objects.isNull(body)
-                        ? HttpRequest.BodyPublishers.noBody() : HttpRequest.BodyPublishers.ofString(body);
-                HttpResponse<String> response = httpClient.send(builder.method(method, publisher).build(),
-                        HttpResponse.BodyHandlers.ofString());
-                return new WebContractResponse(response.statusCode(), response.headers().map(), response.body());
-            } catch (InterruptedException exception) {
-                Thread.currentThread().interrupt();
-                throw new IllegalStateException("Javalin contract request interrupted", exception);
+                URL url = new URL("http://127.0.0.1:" + port + path);
+                HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+                conn.setRequestMethod(method);
+                for (Map.Entry<String, String> entry : headers.entrySet()) {
+                    conn.setRequestProperty(entry.getKey(), entry.getValue());
+                }
+                if (body != null) {
+                    conn.setDoOutput(true);
+                    try (OutputStream os = conn.getOutputStream()) {
+                        os.write(body.getBytes(StandardCharsets.UTF_8));
+                    }
+                }
+                int statusCode = conn.getResponseCode();
+                Map<String, java.util.List<String>> responseHeaders = conn.getHeaderFields();
+                String responseBody;
+                try (BufferedReader reader = new BufferedReader(
+                        new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+                    responseBody = reader.lines().collect(Collectors.joining("\n"));
+                } catch (Exception e) {
+                    responseBody = "";
+                }
+                conn.disconnect();
+                return new WebContractResponse(statusCode, responseHeaders, responseBody);
             } catch (Exception exception) {
                 throw new IllegalStateException("Javalin contract request failed", exception);
             }
